# jetsonNanoRegisterAccess

./: .gitignore  CMakeLists.txt  README.md  jetsonNanoEnv  jetsonToolChain.cmake  pinmux.h  setupJetsonNanoEnv.sh
examples/blinky/: .blinky.cpp.swp  CMakeLists.txt  Makefile  blinky.cpp  blinkyConfig.h.in
examples/i2cExample/: README.md
examples/keyboard_emu/: Makefile  keyboard_emu.cpp
examples/read_all_inputs/: Makefile  read_all_inputs.cpp
examples/spiExample/: README.md
examples/spiExample/verilog/source/: main.v  spi.v
gpioController/: CMakeLists.txt  gpio.h
padGroupController/: CMakeLists.txt  padGroupController.h
peripheralController/: .peripheralController.cpp.swp  CMakeLists.txt  peripheralController.cpp  peripheralController.h  peripheralController.mk
pinmux/: README.md  pinmux.h
pinmuxController/: CMakeLists.txt  pinmuxController.cpp  pinmuxController.h
